(feat) Create initial FirebaseService and associated linkages

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/auth/AuthCtrl.js"></script>
     <script src="js/sidemenu/MenuCtrl.js"></script>
     <script src="js/inbox/InboxCtrl.js"></script>
+    <script src="js/shared/FirebaseService.js"></script>
   </head>
 
   <body ng-app="snapcache">
